Restore line-hight for h3 (fixes #19)
This does almost nothing for Jenkins >= 2.226, but fixes the overlap for
wrapping h3s in older versions of Jenkins.

--- a/less/style.less
+++ b/less/style.less
@@ -32,6 +32,7 @@ h2 {
 h3 {
     font-size: 3em;
     font-weight: normal;
+    line-height: normal;
 }
 
 #header {
